--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <jaxb-core.version>2.3.0.1</jaxb-core.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <jaxb-impl.version>2.3.1</jaxb-impl.version>
+        <camel-spring-boot-starter.version>2.24.0</camel-spring-boot-starter.version>
     </properties>
 
 	<dependencies>
@@ -39,10 +40,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-spring-boot-starter</artifactId>
-			<version>2.24.0</version>
+			<version>${camel-spring-boot-starter.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
